# cogni-nav-x0

./: .gitignore  README.md
src/vf_camera_tf/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/vf_camera_tf/config/: camera_calibration_parameters.yaml  d435_extrinsics.yaml
src/vf_camera_tf/launch/: publish_tfs.launch.py  tf.launch.py
src/vf_camera_tf/resource/: frames_2026-01-26_10.58.06.gv
src/vf_camera_tf/vf_camera_tf_publisher/: calibrate_cams.py  calibrate_intrinsics.py  dummy_camera.py  publish_cam_info.py  publish_camera_tfs.py
src/vf_groundtruth_mapper/: .gitignore  CMakeLists.txt  package.xml  setup.py
src/vf_groundtruth_mapper/config/: gtmapper_params.yaml
src/vf_groundtruth_mapper/gazebo_2d_groundtruth_map/scripts/: gtmap_saver.py  gtmap_saver_backup.py
src/vf_groundtruth_mapper/include/gazebo_2d_groundtruth_map/: common.hpp  groundtruth_map_plugin.hpp
src/vf_groundtruth_mapper/src/: groundtruth_map_plugin.cpp
src/vf_groundtruth_mapper/worlds/: my_world.world
src/vf_robot_bringup/: CMakeLists.txt  FUTURE_WORK.md  README.md  README_quick_Launch.md  README_vf_robot_bringup.md  package.xml  setup.py
src/vf_robot_bringup/config/: README.md  mapper_params_online_async.yaml  nav2_params.yaml  rtabmap_params_multicamera.yaml  rtabmap_params_singlecamera.yaml  uvc1_vf_params.yaml
src/vf_robot_bringup/config/nav2/: README.md  nav2_base.yaml
src/vf_robot_bringup/config/robots/: README_ROBOT_PROFILE.md  turtlebot3_waffle.yaml  virofighter.yaml
src/vf_robot_bringup/launch/: bringup_launch.py  bringup_launch_multicamera.py  gazebo.launch.py  localization_launch.py  localization_launch_d435icam.py  localization_launch_multicamera.py  main.launch.py  main_bag.launch.py  map_saver.launch.py  nav2_rtabmap_launch.py  navigation_launch.py  rviz_gazebo.launch.py  rviz_launch.py  slam_launch.py  slam_launch_d435icam.py  uvc1_empty_world.launch.py  uvc1_empty_world_direct.launch.py  uvc1_hospital_world.launch.py  uvc1_hospital_world_direct.launch.py  uvc1_house.launch.py  uvc1_house_direct.launch.py  uvc1_my_world.launch.py  uvc1_my_world_direct.launch.py  uvc1_my_world_nav2_rtabmap.launch.py  uvc1_robot_state_publisher.launch.py  uvc1_spawn.launch.py
src/vf_robot_bringup/maps/house1/: house1.pgm
src/vf_robot_bringup/maps/my_map/: my_map.pgm  my_map.yaml
src/vf_robot_bringup/rviz/: 3d_camera.rviz  3d_map.rviz  default.rviz  nav2_gazebo.rviz  path_finder_two.rviz  simulation.rviz  vf_bringup.rviz  wall_painter.rviz
src/vf_robot_bringup/vf_robot_bringup/launch_utils/: compose_params.py
src/vf_robot_controller/: CMakeLists.txt  README.md  critics.xml  package.xml  vf_robot_controller.xml
src/vf_robot_controller/config/: default_params.yaml  hospital_params.yaml  tb3_waffle_params.yaml  tb3_waffle_params_collect.yaml  tb3_waffle_params_fixed.yaml  tb3_waffle_params_inference.yaml  tb3_waffle_params_passive.yaml  vf_controller_example.yaml
src/vf_robot_controller/include/vf_robot_controller/: controller.hpp  critic_manager.hpp  optimizer.hpp  parameter_handler.hpp
src/vf_robot_controller/launch/: collect_data_launch.py  imitation_collect_launch.py  imitation_inference_launch.py  inference_launch.py  meta_critic_collect_launch.py  meta_critic_inference_launch.py  vf_controller_launch.py
src/vf_robot_controller/meta_critic/: feature_extractor.py  imitation_data_logger.py  imitation_inference_node.py  meta_critic_data_logger.py  meta_critic_inference_node.py
src/vf_robot_controller/meta_critic/models/: imitation.pt  meta_critic.pt
src/vf_robot_controller/src/: controller.cpp  critic_manager.cpp  optimizer.cpp  parameter_handler.cpp
src/vf_robot_controller/src/critics/: clearance_critic.cpp  corridor_critic.cpp  dynamic_obstacle_critic.cpp  goal_critic.cpp  obstacle_critic.cpp  oscillation_critic.cpp  path_follow_critic.cpp  smoothness_critic.cpp  velocity_critic.cpp  volumetric_critic.cpp
src/vf_robot_controller/src/gcf/: clutter_detector.cpp  corridor_analyzer.cpp  geometric_complexity_field.cpp  volumetric_clearance.cpp
src/vf_robot_controller/src/models/: state.cpp  trajectory.cpp
src/vf_robot_controller/test/: CMakeLists.txt  test_critics.cpp  test_gcf.cpp  test_optimizer.cpp  test_safety.cpp  test_trajectory.cpp
src/vf_robot_controller/training/: README.md  dataset copy.py  dataset.py  diagnose_h5.py  evaluate.py  inspect_h5.py  meta_critic_stats.npz  model.py  rl_finetune.py  train.py
src/vf_robot_description/: CMakeLists.txt  LICENSE  README_vf_robot_description.md  package.xml  setup.py
src/vf_robot_description/docs/: frames_2026-03-20_14.53.50.gv
src/vf_robot_description/launch/: display_robot_urdf.launch.py  display_robot_xacro.launch.py
src/vf_robot_description/rviz/: model.rviz
src/vf_robot_gazebo/: CMakeLists.txt  LICENSE  README.md  README_vf_robot_gazebo.md  package.xml  setup.py
src/vf_robot_gazebo/launch/: ARCHITECTURE.md  vf_empty_world_sdf.launch (1).py  vf_empty_world_sdf.launch.py  vf_empty_world_xacro.launch.py  vf_hospital_world_sdf.launch.py  vf_hospital_world_xacro.launch.py  vf_my_world_sdf.launch.py  vf_my_world_sdf_rviz.launch.py  vf_my_world_xacro.launch.py  vf_my_world_xacro_rviz.launch.py  vf_robot_state_publisher.launch.py  vf_spawn_sdf.launch.py  vf_spawn_xacro.launch.py
src/vf_robot_gazebo/rviz/: vf_robot_gazebo.rviz
src/vf_robot_gazebo/src/: ultrasound.cpp
src/vf_robot_gazebo/worlds/: aisle.world  big_rect.world  classroom.world  corridor.world  corridor3.world  corridor4.world  corridor5.world  corridors2.world  hospital.world  hospital_moving.world  my_world.world  sote_1.world
src/vf_robot_slam/: CMakeLists.txt  LICENSE  README.md  README_vf_robot_slam.md  package.xml  setup.py
src/vf_robot_slam/launch/: depth_to_scan.launch.py  localization_launch_d455cam.py  localization_launch_multicamera_namepath.py  rtabmap_loc.launch.py  rtabmap_slam.launch.py  slam_launch_d455cam.py  slam_launch_multicamera.py  slam_launch_multicamera_costmap.py
src/vf_robot_slam/rviz/: rtabmap_loc.rviz  rtabmap_slam.rviz
src/vf_robot_slam/scripts/: pc_to_scan.py  scan_merger.py
(+104 files in other folders)
