<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_2d_groundtruth_map</name>
  <version>0.0.0</version>
  <description>Gazebo ROS2 plugin to automatically generate a 2D occupancy map from the simulated world at a given height.</description>
  <maintainer email="olipravin18@gmail.com">pravin oli (Erasmus Mundus Intelligent Field Robotics System- IFROS)</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend> <!-- for Python node -->

  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>joint_state_publisher</depend>
  <depend>kdl_parser</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>xacro</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

