<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vf_robot_bringup</name>
  <version>0.1.0</version>
  <description>
    ViroFighter UVC-1 Robot — Bringup Package.
    Single entry point for all navigation modes:
    RTAB-Map SLAM, RTAB-Map Localization, AMCL, SLAM Toolbox.
  </description>
  <maintainer email="olipravin18@gmail.com">Pravin Oli</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Workspace packages -->
  <depend>vf_robot_description</depend>
  <depend>vf_robot_slam</depend>

  <!-- Nav2 stack -->
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>

  <!-- SLAM Toolbox -->
  <exec_depend>slam_toolbox</exec_depend>

  <!-- Core ROS 2 -->
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
