<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vf_robot_controller</name>
  <version>0.1.0</version>
  <description>
    VF Robot Controller — a Nav2 local controller plugin for geometrically complex
    indoor environments (hospital corridors, cluttered rooms, tight doorways).
    Introduces a Geometric Complexity Field (GCF) that drives adaptive B-spline
    trajectory DOF allocation, predictive velocity scheduling, and a hard safety
    shell decoupled from the optimizer.
  </description>
  <maintainer email="pravin@vfrobot.com">Pravin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>visualization_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>eigen3_cmake_module</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/vf_robot_controller.xml"/>
    <nav2_core plugin="${prefix}/critics.xml"/>
  </export>
</package>
