<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vf_robot_description</name>
  <version>1.0.0</version>
  <description>
    ViroFighter UVC1 robot description package.
    Provides URDF/xacro model, meshes, launch files, and RViz config.
    Hybrid C++ and Python ROS2 Humble package.
  </description>

  <maintainer email="pravin@virofighter.com">pravin</maintainer>
  <license>Apache-2.0</license>

  <!-- ── build tools ────────────────────────────────────────────────────────── -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ── build + exec dependencies ─────────────────────────────────────────── -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <!-- ── exec-only dependencies (Python launch infra + URDF tools) ──────────── -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>

  <!-- ── launch infrastructure ─────────────────────────────────────────────── -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- ── testing ────────────────────────────────────────────────────────────── -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- ── ament export ───────────────────────────────────────────────────────── -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
