<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<!--
  HYBRID ament_cmake + Python package — SLAM and Localization only.
  C++ nodes in src/ (reserved, empty now), Python launch files in launch/.
  URDF + meshes live in vf_robot_description (single source of truth).
  Gazebo worlds/models live in vf_robot_gazebo — not duplicated here.

  SLAM stack: RTAB-Map installed system-wide via apt — NOT cloned into workspace.
    sudo apt install ros-humble-rtabmap-ros

  Supported camera configs:
    D435i only  — /camera/*  namespace, front-top, 60° ground-facing
    D455 only   — /camera2/* namespace, rear base-level, wide FOV
    Multicamera — D435i + D455 combined (rgbd_sync + rtabmap rgbd_cameras=2)
-->

<package format="3">
  <name>vf_robot_slam</name>
  <version>0.1.0</version>
  <description>
    SLAM and Localization launch package for the VF ViroFighter (uvc1) mobile robot.
    Supports D435i-only, D455-only, and multicamera RTAB-Map configurations.
    Works on real hardware (use_sim_time:=false) and Gazebo (use_sim_time:=true).
  </description>

  <maintainer email="olipravin18@gmail.com">Pravin</maintainer>
  <license>Apache-2.0</license>

  <!-- ── Build system ────────────────────────────────────────────────────── -->
  <!-- ament_cmake for C++ (src/ reserved) + ament_cmake_python for scripts/ -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ── Core ROS 2 — build + runtime ───────────────────────────────────── -->
  <!-- Listed as <depend> so they satisfy both build and exec requirements.  -->
  <!-- These are also needed if C++ nodes are added to src/ later.           -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- URDF and meshes — colcon builds vf_robot_description before this pkg -->
  <depend>vf_robot_description</depend>

  <!-- ── Runtime-only — launched by launch files, not compiled against ───── -->

  <!-- TF and robot state -->
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- RTAB-Map SLAM stack — installed system-wide, not cloned             -->
  <!-- sudo apt install ros-humble-rtabmap-ros                              -->
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>   <!-- rtabmap node (Humble split pkg) -->
  <exec_depend>rtabmap_sync</exec_depend>   <!-- rgbd_sync for multicam mode     -->
  <exec_depend>rtabmap_odom</exec_depend>   <!-- rgbd_odometry (optional)        -->
  <exec_depend>rtabmap_viz</exec_depend>    <!-- rtabmapviz visualizer           -->

  <!-- Intel RealSense camera driver — real robot only                      -->
  <!-- sudo apt install ros-humble-realsense2-camera                        -->
  <!-- Skipped in Gazebo launches (use_sim_time:=true)                      -->
  <exec_depend>realsense2_camera</exec_depend>

  <!-- Image pipeline utilities -->
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>

  <!-- Point cloud processing (used by RTAB-Map depth pipeline) -->
  <exec_depend>pcl_ros</exec_depend>

  <!-- Visualisation -->
  <exec_depend>rviz2</exec_depend>

  <!-- ── Testing ─────────────────────────────────────────────────────────── -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- No gazebo_model_path export — worlds/models live in vf_robot_gazebo -->
  </export>

</package>